adjusted after-elements positioning tstrategy to prevent pixel-bleeding after hovering

--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -85,8 +85,7 @@ ul {
     &::before {
       content: "";
       position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
+      top: calc(50% - 3px);
       left: -15px;
       width: 6px;
       border-bottom: 6px solid #3dcfb6;
